--- a/Story.html
+++ b/Story.html
@@ -8,7 +8,7 @@
   <body> 
     <div class = "container"> <div class="accordion" id="accordionPanelsStayOpenExample"> 
       <div class="accordion-item"> <h2 class="accordion-header"> 
-        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne"> Accordion Item #1 </button>
+        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne"> Part 1 </button>
       </h2> <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show">
         <div class="accordion-body"> 
           <strong>This is the first item's accordion body.</strong> 
@@ -18,7 +18,7 @@
       </div> 
       <div class="accordion-item"> 
         <h2 class="accordion-header"> 
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo"> Accordion Item #2 </button>
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo"> Part 2 </button>
         </h2> 
         <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse"> 
           <div class="accordion-body"> 
@@ -29,7 +29,7 @@
       </div> 
       <div class="accordion-item"> 
         <h2 class="accordion-header"> 
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree"> Accordion Item #3 </button> 
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree"> Part 3 </button> 
         </h2> 
         <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse">
           <div class="accordion-body"> 
@@ -40,7 +40,7 @@
       </div> 
        <div class="accordion-item"> 
         <h2 class="accordion-header"> 
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseFour" aria-expanded="false" aria-controls="panelsStayOpen-collapseFour"> Accordion Item #4 </button>
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseFour" aria-expanded="false" aria-controls="panelsStayOpen-collapseFour"> Part 4 </button>
         </h2> 
         <div id="panelsStayOpen-collapseFour" class="accordion-collapse collapse"> 
           <div class="accordion-body"> 
