--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@ body{
     <p class="card-text"> Piccaninny Tribe's World.</p>
     <a href="listPiccaninnyTribe.html" class="btn btn-primary"> Let's go into the Piccaninny Tribe World !!!</a>
   </div>
-            </div>
-        </div>
+ </div>
+</div>
 
        <!-- Card 5 -->
         <div class="col-md-4 mb-4">
@@ -148,7 +148,7 @@ body{
             </div>
         </div>
          <div class="row">
-        <!-- Card 1 -->
+        <!-- Card 7 -->
         <div class="col-md-4 mb-4">
             <div class="card">
                 <img src="AllFairy.png" class="card-img-top" alt="...">
@@ -160,7 +160,7 @@ body{
             </div>
         </div>
 
-        <!-- Card 2 -->
+        <!-- Card 8 -->
         <div class="col-md-4 mb-4">
             <div class="card">
                 <img src="pirates.png" class="card-img-top" alt="...">
@@ -172,7 +172,7 @@ body{
             </div>
         </div>
 
-        <!-- Card 3 -->
+        <!-- Card 9 -->
         <div class="col-md-4 mb-4">
             <div class="card">
                 <img src="lostkids.png" class="card-img-top" alt="...">
@@ -183,9 +183,20 @@ body{
                 </div>
             </div>
         </div>
+               <!-- Card 10 -->
+        <div class="col-md-4 mb-4">
+            <div class="card">
+                 <img src="mermaids.png" class="card-img-top" alt="...">
+  <div class="card-body">
+    <h2 class="card-title"> Mermaid </h2>
+    <p class="card-text"> The Sea World of Mermaid.</p>
+    <a href="listMermaids.html" class="btn btn-primary"> Let's go into the Sea World with Mermaids!!!</a>
+  </div>
+            </div>
+        </div>
 
       <div class="row">
-        <!-- Card 7 -->
+        <!-- Card 11 -->
         <div class="col-md-4 mb-4">
             <div class="card">
                 <img src="PeterPanStatic.png" class="card-img-top" alt="...">
